# rustdbg

./: '  .gitignore  .rdbg_history  Cargo.toml  README.md  fmt.md  gdb.md
docs/: dissassembly.md
src/: .rdbg_history  bin.rs  lib.rs
src/debug/: breakpoint.rs  mod.rs
src/inferior/: '  .#mod.rs  ffi.rs  mod.rs  parser.rs  registers.rs
src/interactive/: '  app.rs  commands.rs  completer.rs  console.rs  context.rs  fmt.rs  mod.rs  tabs.rs  ui.rs
src/interactive/context/: mod.rs  ui.rs
src/interactive/util/: event.rs  mod.rs
src/process/: .#lib.rs  lib.rs  mod.rs
src/ptrace/: mod.rs
src/util/: host.rs  mod.rs
tests/: lib.rs
tests/elf/: hello_world  hello_world.c
