[package]
name = "rustdbg"
version = "0.0.1"
authors = ["Nick Mavis <itsnick@gmail.com>"]
default-run = "rdbg"

[dependencies]
libc = "0.2.62"
nix = "0.15.0"
byteorder = "1.3.2"
linefeed = "0.6.0"

[lib]
name = "rustdbg"
path = "src/lib.rs"

[[bin]]
name = "rdbg"
path = "src/bin.rs"

[[bin]]
name = "twelve"
path = "tests/rust/twelve.rs"