[package]
name = "rustdbg"
version = "0.0.1"
authors = ["Nick Mavis <itsnick@gmail.com>"]
default-run = "rdbg"
edition = "2018"

[dependencies]
libc = "^0.2.62"
nix = "^0.15.0"
byteorder = "^1.3.2"
linefeed = "^0.6.0"
ansi_term = "^0.12.1"
rustc-serialize = "^0.3.24"
hex = "^0.3.2"
bytevec = "^0.2.0"
procfs = "^0.5.3"
colored = "^1.8.0"
chrono = "0.4.9"
tui = "0.6.2"
rand = "0.7.2"
structopt = "0.3.2" 
termion = "1.5.3"
stderrlog = "0.4.1"
failure = "0.1.5"

[lib]
name = "rustdbg"
path = "src/lib.rs"

[[bin]]
name = "rdbg"
path = "src/bin.rs"

[[bin]]
name = "twelve"
path = "tests/rust/twelve.rs"